--- a/src/pages/details-bloodsuger.css
+++ b/src/pages/details-bloodsuger.css
@@ -162,6 +162,7 @@
 .diagram .chart-days{
   display: flex;
   justify-content: space-around;
+  flex-direction: row-reverse;
   align-items: flex-end;
   width: 100%;
   gap: 2vw;
