--- a/src/pages/details-bloodpressure.css
+++ b/src/pages/details-bloodpressure.css
@@ -126,46 +126,45 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: row;
+  padding: 1.5rem;
+  gap: 2rem;
 }
 .detailsbp .dBP-diagram .diagramupper,
 .detailsbp .dBP-diagram .diagramlower{
   width: 50%;
 }
-/* تنسيق عنوان الرسم البياني في الجزء العلوي */
-.dBP-diagram .diagramupper .chartjs-title {
-  font-size: 18px;
-  font-weight: bold;
-  color: #333;
+.detailsbp .dBP-diagram .diagramupper .bound ,.detailsbp .dBP-diagram .diagramlower .bound{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-/* تنسيق العناصر المحورية في الجزء العلوي */
-.dBP-diagram .diagramupper .chartjs-axis-title {
-  font-size: 14px;
-  font-weight: bold;
-  color: #666;
+.detailsbp .dBP-diagram .diagramupper .bound p ,.detailsbp .dBP-diagram .diagramlower .bound p  {
+  display: flex;
+  align-items: center;
+  color: var(--graycolor);
+  text-align: right;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.45019rem; /* 116.013% */
 }
 
-/* تنسيق التسميات في الجزء العلوي */
-.dBP-diagram .diagramupper .chartjs-scale-label {
-  font-size: 12px;
-  color: #999;
+.detailsbp .dBP-diagram .diagramupper .bound .boun ,.detailsbp .dBP-diagram .diagramlower .bound .boun{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
 }
 
-/* تنسيق الشبكات في الجزء العلوي */
-.dBP-diagram .diagramupper .chartjs-gridline {
-  stroke: rgba(190, 2, 2, 0.3);
-  stroke-dasharray: 5, 5;
-  stroke-width: 2.77;
+.detailsbp .dBP-diagram .diagramupper .bound .boun .rec ,.detailsbp .dBP-diagram .diagramlower .bound .boun .rec{
+  width: 1.84363rem;
+  height: 1.875rem;
+  flex-shrink: 0;
+  border-radius: 0.3125rem;
+  background-color:var(--Red);
 }
-
-/* تنسيق الخطوط في الجزء العلوي */
-.dBP-diagram .diagramupper .chartjs-line {
-  stroke: #be0202;
-  stroke-width: 2;
-}
-
-
-
 
 
 
@@ -206,28 +205,28 @@
   line-height: normal;
 }
 /* btn */
-.detailsbp .btn {
+.detailsbp .butn {
   display: flex;
   justify-content: center;
 }
-.detailsbp .btn .addrec {
+.detailsbp .butn .addrec {
   display: flex;
   justify-content: center;
   text-align: center;
-  padding: 1rem 0.75rem;
+  max-height: 3rem;
+  padding: 1vh 18vw;
   align-items: center;
-  flex: 0.3;
   color: var(--whiteColor);
   border-radius: 0.625rem;
   background: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, calc(1vw + 3vw), 1.5rem);  
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.03125rem;
 }
-.detailsbp .btn .addrec:hover {
+.detailsbp .butn .addrec:hover {
   opacity: 0.7;
 }
 
