--- a/src/pages/chat.css
+++ b/src/pages/chat.css
@@ -25,7 +25,7 @@
 .chatting .sidebarchat h3 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: clamp(1rem, calc(1vw + 3vw), 1.8rem);  
+  font-size: clamp(1rem, calc(1vw + 3vw), 1.8rem);
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -82,7 +82,7 @@
 }
 .chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .doctorName {
   color: #1c1f1e;
-  font-size: clamp(0.5rem, calc(1vw + 3vw), 1.2rem);  
+  font-size: clamp(0.5rem, calc(1vw + 3vw), 1.2rem);
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
@@ -103,7 +103,7 @@
 .chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .lastMessage {
   font-size: 0.9375rem;
   width: 100%;
-  overflow: hidden; 
+  overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
   flex-shrink: 0;
@@ -123,7 +123,7 @@
   opacity: 0.7;
   border-radius: 50%;
   color: white;
-  font-size: clamp(0.5rem, calc(1vw + 3vw), 0.7rem);  
+  font-size: clamp(0.5rem, calc(1vw + 3vw), 0.7rem);
   font-family: "Inter", sans-serif;
   font-weight: 500;
   line-height: 16px;
@@ -210,24 +210,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 .chatm .imgd {
   position: relative;
   overflow: hidden;
-  width:4.5rem;
+  width: 4.5rem;
   height: 4.5rem;
-   border-radius: 50%;
+  border-radius: 50%;
 }
-.chatm .imgd img{
-   position: absolute;
-   object-fit: cover;
-   object-position: top right; 
-   top: 0;
-   left: 0;
-   width: 300%; 
-   height: 260%; 
-   transform: translate(-45%, -15% )scale(1);
+.chatm .imgd img {
+  position: absolute;
+  object-fit: cover;
+  object-position: top right;
+  top: 0;
+  left: 0;
+  width: 300%;
+  height: 260%;
+  transform: translate(-45%, -15%) scale(1);
 }
 .chatm .doctorinfor .contactimgchat .onlineIndicator {
   width: clamp(0.9rem, calc(1vw + 3vw), 1rem);
@@ -236,7 +235,7 @@
   border-radius: 50%;
   border: 1px solid white;
   position: absolute;
-  right:0.4em;
+  right: 0.4em;
   bottom: -0.1em;
   z-index: 2;
 }
@@ -295,12 +294,12 @@
   align-self: flex-start;
   max-width: 50%;
 }
-.chatm .chat-messages .user-time{
+.chatm .chat-messages .user-time {
   text-align: right;
   font-size: 0.7rem;
   color: #c8c8c8;
 }
-.chatm .chat-messages .doctor-time{
+.chatm .chat-messages .doctor-time {
   text-align: right;
   font-size: 0.7rem;
   color: #8a8a8a;
@@ -333,7 +332,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius:0.5rem;
+  border-radius: 0.5rem;
   border: 1px solid var(--Red);
   background: #fff;
   box-sizing: border-box;
@@ -342,8 +341,8 @@
   padding: 0rem 2.5rem;
 }
 .input-area svg {
-  min-width: 30px; 
-  width: 4vw; 
+  min-width: 30px;
+  width: 4vw;
   height: 6vh;
 }
 .input-area .input-container svg:hover {
@@ -354,14 +353,14 @@
   border: 1px solid transparent;
 }
 .input-area .input-container .textarea::placeholder {
-  font-size: 80%; 
+  font-size: 80%;
 }
-
 .input-area .input-container .textarea {
   width: 100%;
   height: 100%;
   justify-content: center;
-  padding-top: 0.7rem;
+  padding-top: 1rem;
+  padding-left: 1rem;
   box-sizing: border-box;
   border: none;
   resize: none;
@@ -379,7 +378,6 @@
 .input-area button:hover {
   opacity: 0.7;
 }
-
 .emoji-picker-position {
   position: relative;
   display: flex;
@@ -411,21 +409,20 @@
   display: none;
 }
 
-.chatm .convback{
+.chatm .convback {
   margin-left: -2.7em;
   margin-top: -1.9em;
 }
-.chatm .convback:hover{
+.chatm .convback:hover {
   opacity: 0.7;
 }
 .chatm .fa-solid.fa-arrow-left {
   cursor: pointer;
-  color: var(--Red); 
+  color: var(--Red);
   display: none;
   width: 1em;
-  padding: 1em  0.5em ;
+  padding: 1em 0.5em;
 }
-
 
 /*Res*/
 @media screen and (max-width: 750px) {
@@ -441,7 +438,8 @@
   .conversation-default.active {
     padding: 16px;
   }
-  .chatt header,  .chatt .footer {
+  .chatt header,
+  .chatt .footer {
     display: none;
   }
 }
