--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -204,21 +204,22 @@
   flex-shrink: 0;
   margin: -0.2em 0;
 }
+/*btn*/
 .BP-data .box .add {
   display: flex;
   justify-content: center;
   text-align: center;
   max-height: 3rem;
-  padding: 1rem 15vw;
+  max-width: min-content;
+  padding: 1vh 9vw;
   align-items: center;
   color: var(--whiteColor);
   border-radius: 0.625rem;
   background: var(--Red);
-  font-family: "Roboto", sans-serif;
-  font-size: clamp(1.5rem, calc(2vw + 5vw), 1.1rem);
+  font-family: 'Roboto',sans-serif;
+  font-size: clamp(1rem, calc(1vw + 3vw), 1.5rem);  
   font-style: normal;
   font-weight: 500;
-  line-height: 100%;
   letter-spacing: 0.03125rem;
 }
 .BP-data .box .add:hover {
