--- a/src/pages/forget_password.css
+++ b/src/pages/forget_password.css
@@ -104,7 +104,7 @@ font-size: 1rem;
 .rbtr{
     display: flex;
     width: 30rem;
-    
+    margin: 1.5rem -0.1rem;
 height: 3rem;
 justify-content: center;
 align-items: center;
