--- a/src/pages/Blood_pressure.css
+++ b/src/pages/Blood_pressure.css
@@ -221,6 +221,7 @@
   font-style: normal;
   font-weight: 500;
   letter-spacing: 0.03125rem;
+  cursor: pointer;
 }
 .BP-data .box .add:hover {
   opacity: 0.7;
