--- a/src/pages/forget_password.css
+++ b/src/pages/forget_password.css
@@ -101,6 +101,17 @@ font-size: 1rem;
     border: 0.1rem solid #BE0202;
 }
 
+.success_message {
+    color: green;
+    margin-top: 10px;
+  }
+  
+  .error_message {
+    color: red;
+    margin-top: 10px;
+  }
+  
+
 .rbtr{
     display: flex;
     width: 30rem;
