--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -83,7 +83,14 @@
   align-items: flex-start;
   gap: 2.5em;
   margin-bottom: 2.5rem;
-  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 4px;
+  cursor: pointer;
 }
 .bloodsugar .date::-webkit-scrollbar {
   display: none;
@@ -150,7 +157,6 @@
 }
 .bloodsugar .dig{
   overflow-x: auto;
-  scrollbar-width: none;
 }
 .bloodsugar .dig::-webkit-scrollbar {
   display: none;
@@ -162,7 +168,6 @@
   min-height:15.625rem; 
   background-color: var(--whiteColor);
   overflow-x: auto;
-  scrollbar-width: none;
 }
 .bloodsugar .container::-webkit-scrollbar {
   display: none;
