--- a/src/pages/Blood_sugar.css
+++ b/src/pages/Blood_sugar.css
@@ -83,18 +83,18 @@
   align-items: flex-start;
   gap: 2.5em;
   margin-bottom: 2.5rem;
+  padding-bottom: 1rem;
 }
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 9px;
+  height: 9px;
 }
 ::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 4px;
   cursor: pointer;
 }
-.bloodsugar .date::-webkit-scrollbar {
-  display: none;
-}
+
 .bloodsugar .day-container {
   flex: 0 0 auto;
   display: flex;
@@ -169,9 +169,7 @@
   background-color: var(--whiteColor);
   overflow-x: auto;
 }
-.bloodsugar .container::-webkit-scrollbar {
-  display: none;
-}
+
 .bloodsugar .mark-bar ,.red-bar{
   position: absolute;
   bottom: 1.5rem;
