--- a/src/pages/doctors.css
+++ b/src/pages/doctors.css
@@ -366,7 +366,7 @@ line-height: normal;
   flex-direction: row;
   gap: clamp(1rem, calc(1vw + 3vw), 4.25rem);
 }
-.doctor-container .navigation .status  {
+.doctor-container .navigation .status button  {
   color: #777474;
   font-family: "Roboto", sans-serif;
   font-size: clamp(1rem, calc(1vw + 3vw), 2rem);
@@ -395,7 +395,7 @@ line-height: normal;
   background: var(--Red);
   transition: all 0.3s ease;
 }
-.doctor-container .navigation .status .active {
+.doctor-container .navigation .status button.active {
   color: #420000;
 }
 .doctor-container .doctor-info {
