--- a/src/pages/fill_information.css
+++ b/src/pages/fill_information.css
@@ -19,7 +19,7 @@
   align-items: center;
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
-  font-size: 1.5rem;
+  font-size: clamp(0.5rem, calc(1vw + 3vw), 1.5rem);
   font-style: normal;
   font-weight: 600;
   line-height: normal;
