--- a/src/pages/forget_password.css
+++ b/src/pages/forget_password.css
@@ -1,134 +1,128 @@
-
-.forgetpassword_wrapper{
-    width: 100vw; 
-   height: 100vh; 
+.forgetpassword_wrapper {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-justify-content: center;
-align-items: center;
-overflow-x: hidden;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
 }
 
-.forgetpassword_card{
-    display: flex;
-width: 42.5rem;
-padding: 5rem;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 1.5rem;
-border: 1px solid #BE0202;
-background: var(--Default-White, #FFF);
+.forgetpassword_card {
+  display: flex;
+  width: 42.5rem;
+  padding: 5rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  border: 1px solid #be0202;
+  background: var(--Default-White, #fff);
 }
 
-.rforgetr{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-    align-self: stretch;
+.rforgetr {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  align-self: stretch;
 }
 
-.forgetpassword_title{
-    color: rgba(190, 2, 2, 1);
-    display: flex;
-flex-direction: column;
-align-items: center;
-gap: 0.5rem;
-align-self: stretch;
-font-size: 2rem;
-    
+.forgetpassword_title {
+  color: rgba(190, 2, 2, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  align-self: stretch;
+  font-size: 2rem;
 }
 
-.forgetpassword_desc{
-    color: rgba(53, 53, 53, 1);
-    align-self: stretch;
-    color: #353535;
-text-align: center;
+.forgetpassword_desc {
+  color: rgba(53, 53, 53, 1);
+  align-self: stretch;
+  color: #353535;
+  text-align: center;
 
-/* Body/L */
-font-family: Roboto;
-font-size: 1.125rem;
-font-style: normal;
-font-weight: 400;
-line-height: 140%; /* 1.575rem */
+  /* Body/L */
+  font-family: Roboto;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 1.575rem */
 }
 
-
-.form_box{
-    display: flex;
-padding-top: 1.5rem;
-flex-direction: column;
-align-items: center;
-gap: 1rem;
-align-self: stretch;
+.form_box {
+  display: flex;
+  padding-top: 1.5rem;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  align-self: stretch;
 }
 
-.input_box{
-    display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 0.25rem;
-align-self: stretch;
-
-
+.input_box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.25rem;
+  align-self: stretch;
 }
 
-.remailr{
-    color: #1F1F1F;
+.remailr {
+  color: #1f1f1f;
 
-/* Body/S */
-font-family: Roboto;
-font-size: 0.875rem;
-font-style: normal;
-font-weight: 400;
-line-height: 140%; /* 1.225rem */
+  /* Body/S */
+  font-family: Roboto;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 1.225rem */
 }
 
-.remair{
-    display: flex;
-height: 3rem;
-width: 30rem;
-padding: 1rem;
-align-items: center;
-gap: 0.5rem;
-align-self: stretch;
-border-radius: 0.625rem;
-border: 0.1rem solid #BE0202;
-font-size: 1rem;
+.remair {
+  display: flex;
+  height: 3rem;
+  width: 30rem;
+  padding: 1rem;
+  align-items: center;
+  gap: 0.5rem;
+  align-self: stretch;
+  border-radius: 0.625rem;
+  border: 0.1rem solid #be0202;
+  font-size: 1rem;
 }
 
-.remair:hover{
-    border: 0.1rem solid #BE0202;
+.remair:hover {
+  border: 0.1rem solid #be0202;
 }
 
 .success_message {
-    color: green;
-    margin-top: 10px;
-  }
-  
-  .error_message {
-    color: red;
-    margin-top: 10px;
-  }
-  
+  color: green;
+  margin-top: 10px;
+}
 
-.rbtr{
-    display: flex;
-    width: 30rem;
-    margin: 1.5rem -0.1rem;
-height: 3rem;
-justify-content: center;
-align-items: center;
-align-self: stretch;
-border-radius: 0.625rem;
-border: 2px solid #BE0202;
-background: #BE0202;
-display: flex;
-padding: 0rem 1rem;
-justify-content: center;
-align-items: center;
-gap: 0.625rem;
-font-size: 1.2rem;
-color: #fff;
-cursor: pointer;
+.error_message {
+  color: red;
+  margin-top: 10px;
+}
+
+.rbtr {
+  display: flex;
+  width: 30rem;
+  margin: 1.5rem -0.1rem;
+  height: 3rem;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 0.625rem;
+  border: 2px solid #be0202;
+  background: #be0202;
+  display: flex;
+  padding: 0rem 1rem;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  font-size: 1.2rem;
+  color: #fff;
+  cursor: pointer;
 }
