--- a/src/pages/Activity.css
+++ b/src/pages/Activity.css
@@ -15,7 +15,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  padding: 0 0rem 0 1rem;
+  padding: 0 0 0 1rem;
   margin-left: 1rem;
 }
 
@@ -34,7 +34,7 @@
 
                   /* blood-pressure-sec */
 
-.detailsbpa {
+.blood_pressure {
   display: flex;
   flex-direction: column;
   padding: 0 0 0 5vw;
@@ -42,13 +42,13 @@
   padding: 1rem 2rem 2.5rem 2rem;
 }
 
-.detailsbpa .headcon {
+.blood_pressure .head {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
 }
 
-.detailsbpa .contant {
+.blood_pressure .contant {
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
@@ -63,14 +63,14 @@
   line-height: normal;
 }
 
-.dBP-status {
-  max-width: 40rem;
+.blood_pressure .status {
+  width: 40%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.dBP-status p {
+.blood_pressure .status p {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
@@ -79,7 +79,7 @@
   line-height: 1.45019rem;
 }
 
-.dBP-status span {
+.blood_pressure .status span {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
   font-size: 1.25rem;
@@ -89,36 +89,29 @@
   animation: none;
 }
 
-.dBP-status button {
+.blood_pressure .status button {
   text-align-last: center;
-  padding: 0.6vh 9vw;
+  padding: 0.4rem 7rem;
   border-radius: 1rem;
   background: var(--Red);
   border: none;
+  margin: 0 0 0 20%;
 }
 
-.dBP-status p {
-  color: var(--graycolor);
-  font-family: "Roboto", sans-serif;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.45019rem; /* 116.013% */
-}
-
-.dBP-status button p {
+.blood_pressure .status button p {
   color: var(--whiteColor);
   text-align: right;
   font-family: "Roboto", sans-serif;
-  font-size: 0.9375rem;
+  font-size: 1.2rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.45019rem; /* 154.684% */
+  line-height: 1rem;
 }
+
 
                         /* date */
                         
-.detailsbpa .dBP-date {
+.blood_pressure .BP-date {
   width: 100%;
   height: auto;
   display: flex;
@@ -129,11 +122,11 @@
   scrollbar-width: none;
 }
 
-.detailsbpa .dBP-date::-webkit-scrollbar {
+.blood_pressure .BP-date::-webkit-scrollbar {
   display: none;
 }
 
-.detailsbpa .day-container {
+.blood_pressure .day-container {
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
@@ -142,7 +135,7 @@
   gap: 1.2rem;
 }
 
-.detailsbpa .day-name {
+.blood_pressure .day-name {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
@@ -150,7 +143,7 @@
   word-wrap: break-word;
 }
 
-.detailsbpa .date-container {
+.blood_pressure .date-container {
   width: 72px;
   height: 72px;
   position: relative;
@@ -158,7 +151,7 @@
   cursor: pointer;
 }
 
-.detailsbpa .date-text {
+.blood_pressure .date-text {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -169,40 +162,35 @@
   word-wrap: break-word;
 }
 
-.detailsbpa .selected {
+.blood_pressure .selected {
   opacity: 0.6;
 }
 
-                        /* graph */
+                        /* line-pressure */
 
-.detailsbpa .dBP-diagram {
-  max-width: 100%;
-  min-height: 23.125rem;
-  flex-shrink: 0;
+.blood_pressure .BP-diagram{
   border-radius: 0.625rem;
   border: 1px solid var(--Red);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.detailsbpa .dBP-diagram .diagrams {
   display: flex;
   flex-direction: row;
-  gap: 7rem;
   padding: 1.5rem;
+  gap: 2rem;
 }
 
-.detailsbpa .dBP-diagram .diagrams .dig {
+.blood_pressure .BP-diagram .diagramupper,
+.blood_pressure .BP-diagram .diagramlower{
   width: 50%;
 }
 
-.detailsbpa .dBP-diagram .diagrams .dig .bound {
+.blood_pressure .BP-diagram .diagramupper .bound ,.blood_pressure .BP-diagram .diagramlower .bound{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
-.detailsbpa .dBP-diagram .diagrams .dig .bound p {
+.blood_pressure .BP-diagram .diagramupper .bound p ,.blood_pressure .BP-diagram .diagramlower .bound p  {
   display: flex;
   align-items: center;
   color: var(--graycolor);
@@ -214,25 +202,23 @@
   line-height: 1.45019rem; /* 116.013% */
 }
 
-.detailsbpa .dBP-diagram .diagrams .dig .bound .boun {
+.blood_pressure .BP-diagram .diagramupper .bound .boun ,.blood_pressure .BP-diagram .diagramlower .bound .boun{
   display: flex;
   flex-direction: row;
   gap: 0.5em;
 }
 
-.detailsbpa .dBP-diagram .diagrams .dig .bound .boun .rec {
+.blood_pressure .BP-diagram .diagramupper .bound .boun .rec ,.blood_pressure .BP-diagram .diagramlower .bound .boun .rec{
   width: 1.84363rem;
   height: 1.875rem;
   flex-shrink: 0;
   border-radius: 0.3125rem;
-  border: 1px solid var(--Red);
+  background-color:var(--Red);
 }
-
-
 
                       /* inf-det */
 
-.inf-det {
+ .inf-det {
   max-width: 100%;
   min-height: 16rem;
   padding: 1rem;
@@ -240,10 +226,10 @@
   flex-direction: column;
   gap: 1rem;
   border-radius: 0.625rem;
-  border: 2px solid #d9d9d9;
+  border: 1px solid #d9d9d9;
 }
 
-.inf-det h3 {
+ .inf-det h3 {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
   font-size: 1.875rem;
@@ -252,7 +238,7 @@
   line-height: normal;
 }
 
-.inf-det h4 {
+ .inf-det h4 {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
@@ -271,15 +257,15 @@
   line-height: normal;
 }
 
-                        /* table */
+                        /* table-pressure */
 
-.table{
-  width: 29rem;
+ .table{
+  width: 34%;
   height: 16rem;
   border: 0.1rem solid var(--Red);
   border-radius: 1rem;
   padding: 2rem ;
-  margin: 0 2rem 2rem 25rem;
+  margin: 0 2% 2% 31%;
 }
 
 .table .head{
@@ -317,7 +303,7 @@
   margin: 1rem 0 0 0.1rem;
   border-radius: 0.6rem;
   height: 3rem;
-  width: 24.7rem;
+  width: 100%;
 }
 
 .table .his .status{
@@ -325,18 +311,18 @@
   font-weight: 600;
   font-family: 'Roboto',sans-serif;
   font-size: 1.2rem;
-  margin: 0.7rem 0 0 1rem;
+  margin: 2.5% 0 0 3%;
 }
 
 .table .his .mesure{
-  margin: -1.4rem 0 0 6rem;
+  margin: -5.7% 0 0 17%;
   font-family: 'Roboto',sans-serif;
   font-size: 1.2rem;
   color: var(--darkgraycolor);
 }
 
 .table .his .unit-p{
-  margin: -1.4rem 0 0 4.2rem;
+  margin: -8% 0 0 21%;
   font-family: 'Roboto',sans-serif;
   font-weight: 600;
   font-size: 1.2rem;
@@ -347,25 +333,25 @@
   color: var(--Red);
   font-weight: 600;
   font-family: 'Roboto',sans-serif;
-  margin: -1.4rem 0 0 14rem;
+  margin: -5.5% 0 0 52%;
 }
 
 .table .his .line2-p{
   color: var(--Red);
   font-weight: 600;
   font-family: 'Roboto',sans-serif;
-  margin: -1.4rem 0 0 21rem;
+  margin: -5.9% 0 0 83%;
 }
 
 .table .his .date-p{
-  margin: -1.3rem 0 0 14.5rem;
+  margin: -5.5% 0 0 55%;
   font-family: 'Roboto',sans-serif;
   font-size: 1.2rem;
   color: var(--darkgraycolor);
 }
 
 .table .his  .day-p{
-  margin: -1.3rem 0 0 21.5rem;
+  margin: -5.4% 0 0 87%;
   font-family: 'Roboto',sans-serif;
   font-size: 1.2rem;
   color: var(--darkgraycolor);
@@ -379,15 +365,18 @@
 
 .record .btn {
   display: flex;
-  width: 26rem;
-  padding: 2rem 1rem;
-  margin-left: 26.5rem;
-  flex: 0.3;
+  justify-content: center;
+  text-align: center;
+  max-height: 3rem;
+  width: 29%;
+  padding: 1rem 0.3rem;
+  margin: 0 0 0 35%;
+  align-items: center;
   color: var(--whiteColor);
   border-radius: 0.625rem;
   background: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.4rem ;  
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
@@ -619,21 +608,28 @@
   font-weight: 400;
 }
 
-                                      /* table */
+                                      /* table-sugar */
 
 .bloodsugarda .table .his .data{
-  width: 24.5rem;
+  border: 1px solid var(--Red);
+  margin: 1rem 0 0 0.1rem;
+  border-radius: 0.6rem;
+  height: 3rem;
+  width: 95%;
 }
 
 .bloodsugarda .table .his .mesure{
-  margin: -1.4rem 0 0 5.8rem;
+  margin: -5.7% 0 0 17%;
+  font-family: 'Roboto',sans-serif;
+  font-size: 1.2rem;
+  color: var(--darkgraycolor);
 }
 
 .bloodsugarda .table .his .unit{
-  margin: -1.5rem 0 0 2.3rem;
+  margin: -8.5% 0 0 19%;
   font-family: 'Roboto',sans-serif;
   font-weight: 600;
-  font-size: 1.28rem;
+  font-size: 1.2rem;
   color: var(--darkgraycolor);
 }
 
@@ -641,29 +637,31 @@
   color: var(--Red);
   font-weight: 600;
   font-family: 'Roboto',sans-serif;
-  margin: -1.4rem 0 0 11.7rem;
+  margin: -6% 0 0 50%;
 }
 
 .bloodsugarda .table .his .line2{
   color: var(--Red);
   font-weight: 600;
   font-family: 'Roboto',sans-serif;
-  margin: -1.4rem 0 0 18.8rem;
+  margin: -6.3% 0 0 82%;
 }
 
 .bloodsugarda .table .his .date{
-  margin: -1.3rem 0 0 12.3rem;
+  margin: -5.3% 0 0 53%;
   font-family: 'Roboto',sans-serif;
   font-size: 1.2rem;
   color: var(--darkgraycolor);
 }
 
 .bloodsugarda .table .his .day{
-  margin: -1.3rem 0 0 19.5rem;
+  margin: -5.8% 0 0 85%;
   font-family: 'Roboto',sans-serif;
   font-size: 1.2rem;
   color: var(--darkgraycolor);
 }
+      
+                          /* media */
 
 @media (max-width: 750px) {
   .detailsbpa .dBP-diagram .diagrams {
