--- a/src/pages/Booking_Online.css
+++ b/src/pages/Booking_Online.css
@@ -4,41 +4,42 @@
   align-content: flex-start;
   color: var(--Red);
   font-family: 'Roboto',sans-serif;
-  font-size: 2.8rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
-  margin: 2rem 0;
+  margin: 2rem ;
 }
 
                         /* Cards */
 
-.card{
+body .card{
   display: block;
-  width: 44rem;
+  width: 53%;
   border: 0.1rem solid var(--Red);
   border-radius: 1rem;
-  margin: 2rem 0 3rem 21rem;
+  margin:-1% 0 2% 25% ;
 }
 
                         /* Card-img */
 
-.card .d-img{
+body .card .d-img{
+  margin: -5% 0 0 0;
   display: flex;
 }
 
-.card .d-img img{
-  width: 27rem;
-  height: 29rem;
-  margin: 1rem 0 1rem 7rem;
+body .card .d-img img{
+  width: 65%;
+  height: 70vh;
 }
 
                         /* Card-doctor-name */
 
-.card .d-name {
+body .card .d-name {
+
   display: flex;
 }
 
-.card .d-name p{
+body .card .d-name p{
   color: var(--blackColor);
   font-family: 'Roboto',sans-serif;
   font-size: 1.5rem;
@@ -48,7 +49,7 @@
   margin-top: -1rem;
 }
 
-.card .d-name .def{
+body .card .d-name .def{
   color: #9c9b9bc5;
   font-family: 'Roboto',sans-serif;
   font-size: 1.27rem;
@@ -60,7 +61,7 @@
 
                         /* Card-doctor-number */
 
-.card .d-tele p{
+body .card .d-tele p{
   display: flex;
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
@@ -72,12 +73,12 @@
 
                         /* Card-doctor-location */
 
-.card .location{
+body .card .location{
   display: flex;
   margin-top: -0.6rem;
 }
 
-.card .location p{
+body .card .location p{
   color: var(--blackColor);
   font-family: 'Roboto',sans-serif;
   font-size: 1.27rem;
@@ -87,20 +88,20 @@
 
                         /* Card-doctor-rate */
 
-.card .stars{
+body .card .stars span{
   display: flex;
-  padding-top: 0.6rem;
+  padding: 0.6rem 0 0.3rem 1rem;
 }
 
                         /* Card-doctor-about */
 
-.card .info{
+body .card .info{
   display: flex;
   gap: 1%;
   margin: -2rem 0 0 -1.3rem;
 }
 
-.card .info p{
+body .card .info p{
   color: var(--Red);
   font-family: 'Roboto',sans-serif;
   font-size: 1.4rem;
@@ -108,7 +109,7 @@
   font-weight: 600;
 }
 
-.card .info .d-about{
+body .card .info .d-about{
   display: flex;
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
@@ -120,12 +121,12 @@
 
                         /* Card-(doctor_user)-rate */
 
-.card .rate{
+body .card .rate{
   display: flex;
   padding: 1rem 0 0 1.3rem;
 }
 
-.card .rate p{
+body .card .rate p{
   color: var(--Red);
   font-family: 'Roboto',sans-serif;
   font-size: 1.5rem;
@@ -133,20 +134,18 @@
   font-weight: 600;
 }
 
-.card .rate input {
+body .card .rate input {
   display: none;
 }
 
-.card .rate .star{
+body .card .rate .star{
   margin-top: -1.4rem ;
   padding-left: 0.5rem;
 }
 
-                        /* Card-(doctor_user)-rate (popup) */
-
 .card .rate  .popup-r{
   width: 100%;
-  height: 83.5rem;
+  height: 187vh;
   background: rgba(18, 22, 25, 0.65);
   position: absolute;
   top: 10%;
@@ -155,8 +154,8 @@
   padding: 27%;
 }
 
-.card .rate .popup-r p{
-  margin: 16rem 0 0 0 ;
+body .card .rate .popup-r p{
+  margin: 20% 0 0 10% ;
   color: var(--whiteColor);
   font-family: 'Roboto',sans-serif;
   font-size: 2rem;
@@ -165,7 +164,7 @@
   line-height: 100%;
   letter-spacing: 0.5px;
 }
-.card .rate  .popup-r .btn{
+body .card .rate  .popup-r .btn{
   display: flex;
   min-height:5vh;
   width: 9em;
@@ -183,10 +182,9 @@
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
-  margin: 5rem 0 0 13rem;
+  margin: 5% 0 0 33%;
 }
-
-.card .rate .popup-r .btn:hover{
+body .card .rate .popup-r .btn:hover{
   cursor: pointer;
   background-color: var(--blackred);
   color: var(--whiteColor);
@@ -195,44 +193,46 @@
 
                         /* Book - Button*/
 
-.card .book .btn{
-  width: 18rem;
-  height: 4rem;
+body .card .book button{
+  width: 15rem;
+  height: 3.5rem;
   background-color: var(--Red);
   color: white;
   font-family: 'Roboto',sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   border: none;
   border-radius: 0.7rem;
-  margin: 2rem 0 2rem 12.5rem;
+  margin: 2rem 0 2rem 14.5rem;
 }
 
-.card .book .btn:hover{
+body .card .book button:hover{
   cursor: pointer;
   background-color: var(--secondaryColor);
   color: var(--Red);
   border: none;
 }
 
+
                         /* Complete - Button*/
 
-.card .book .popup-b{
+body .card .book .popup-b{
   width: 100%;
-  height: 83.5rem;
+  height: 196vh;
   background: rgba(18, 22, 25, 0.65);
   position: absolute;
   top: 10%;
   text-align: center;
   left: 0%;
-  padding: 25%;
+  padding: 27%;
 }
 
-.card .book .popup-b .check{
+body .card .book .popup-b .check{
   width: 20rem;
   height: 30rem;
+  margin-top: -10%;
 }
 
-.card .book .popup-b .btn{
+body .card .book .popup-b .btn{
   display: flex;
   min-height:5vh;
   width: 9em;
@@ -250,10 +250,10 @@
   font-weight: 500;
   line-height: 100%;
   letter-spacing: 0.5px;
-  margin: -3rem 0 0 14rem;
+  margin: -3rem 0 0 13rem;
 }
 
-.card .book .popup-b .btn:hover{
+body .card .book .popup-b .btn:hover{
   cursor: pointer;
   background-color: var(--blackred);
   color: var(--whiteColor);
