--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -4,7 +4,6 @@
   width: 100%;
   height: 42.75vh;
   flex-shrink: 0;
- 
 }
 
 .profile-sec img{
@@ -12,6 +11,9 @@
   width: 28%;
   height: 25vw;
   margin:7% 0 0 37%;
+  border-radius: 50%;
+  background-size: contain;
+  position: relative;
 }
 
 .profile-sec .edit{
@@ -19,11 +21,21 @@
   width: 100%;
   padding-left: 49rem;
   margin-top: -5rem;
+  position: absolute;
 }
 
 .profile-sec .edit button{
-  border: none;
+  display: flex;
+  position: absolute;
   background: none;
+  border: none;
+}
+
+.profile-sec .edit button .upload{
+  color: var(--Red);
+  width: 17%;
+  height: 20%;
+  margin: 2% 0 0 2%;
 }
 
 .profile-sec h4{
@@ -35,7 +47,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  padding: 7% 0 0 43% ;
+  padding: 3% 0 0 43% ;
 }
  
                           /* section-info */
@@ -185,7 +197,7 @@
 
 .popup-s{
   width: 100%;
-  height: 90.3vw;
+  height: 89.5vw;
   background: rgba(18, 22, 25, 0.65);
   position: absolute;
   top: 10%;
@@ -229,13 +241,15 @@
 
 .popup-d{
   width: 100%;
-  height: 90.3vw;
+  height: 89.5vw;
   background: rgba(18, 22, 25, 0.65);
   position: absolute;
   top: 10%;
   text-align: center;
   left: 0%;
 }
+
+                          /* popup-message */
 
 .popup-d .message{
   width: 30%;
@@ -306,10 +320,46 @@
   letter-spacing: 0.5px;
   margin: 4% 0 0 2%;
 }
-
+ 
 .message .button:hover{
   cursor: pointer;
   background-color: var(--secondaryColor);
   color: var(--Red);
   border: none;
+}
+
+                          /* media */
+
+@media (max-width:1050px){
+  .profile-sec .edit button .upload{
+    width: 15%;
+    height: 15%;
+    margin: 5% 0 0 -62%;
+
+  }
+  .info-sec{
+    padding-top: 18%;
+  }
+  .f-name input{
+    width: 69%;
+  }
+  .l-name{
+    margin: 3.6% 0 0 -35%;
+  }
+  .l-name input{
+    width: 69%;
+  }
+  .popup-s{
+    height: 110vw;
+  }
+  .popup-s .btn{
+    width: 20%;
+    margin: 5% 0 0 40%;
+  }
+  .popup-d{
+    height: 110vw;
+  }
+  .popup-d .message{
+    height: 25vw; 
+  }
 }
