--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -302,10 +302,10 @@
   line-height: normal;
 }
 
-.doctors{
+.doc-sec .doctors{
   display: flex;
   width: 100%;
-  height: 66rem; 
+  height: 66vh; 
   justify-content: center;
   align-items: flex-start;
   gap: 1rem;
@@ -314,7 +314,7 @@
 
                             /* carousel */
 
-.carousel{
+.doc-sec .doctors .carousel{
   width: 100%;
   height: 80vh;
   overflow: hidden;
@@ -322,11 +322,11 @@
   overflow-x: auto;
 }
 
-.carousel::-webkit-scrollbar{
+.doc-sec .doctors .carousel::-webkit-scrollbar{
   display: none;
 }
 
-.inner-carousel{
+.doc-sec .doctors .inner-carousel{
   display: flex;
   width: 100.25rem;
   height: 26.375rem;
@@ -334,7 +334,7 @@
   flex-shrink: 0;
   margin-left: 0.1rem;
 }
-.carousel .item{
+.doc-sec .doctors .carousel .inner-carousel .item{
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -345,7 +345,12 @@
 
                           /* carousel-content*/
 
-.doc-name h4{
+.doc-sec .doctors .carousel .inner-carousel .item img{
+    width: 50%;
+    height: 50%;
+}
+
+.doc-sec .doctors .carousel .inner-carousel .item .doc-name h4{
   color:#21272A;
   font-family: 'Roboto',sans-serif;
   font-size: 1.25rem;
@@ -355,13 +360,13 @@
   padding: 1rem 0 0 1rem;
 }
 
-.t-work{
+.doc-sec .doctors .carousel .inner-carousel .item .t-work{
   padding: 0.6rem 0 0 1rem ;
   width: 12.875rem;
   height: 1.83081rem;
 }
 
-.t-work h6{
+.doc-sec .doctors .carousel .inner-carousel .item .t-work h6{
   margin: -1.4rem 0 0 2rem;
   color: #393939;
   font-family: 'Roboto',sans-serif;
@@ -371,13 +376,13 @@
   line-height: 110%; /* 0.825rem */
 }
 
-.location{
+.doc-sec .doctors .carousel .inner-carousel .item .location{
   padding: 0.6rem 0 0 1rem ;
   width: 12.875rem;
   height: 1.83081rem;
 }
 
-.location h6{
+.doc-sec .doctors .carousel .inner-carousel .item .location h6{
   margin: -1.4rem 0 0 2rem;
   color: #393939;
   font-family: 'Roboto',sans-serif;
@@ -387,25 +392,28 @@
   line-height: 110%; /* 0.9625rem */
 }
 
-.stars{
+.doc-sec .doctors .carousel .inner-carousel .item .stars{
   padding: 0.2rem 0 0 1rem;
 }
 
-.doc-info{
+.doc-sec .doctors .carousel .inner-carousel .item .stars span{
+  margin:2% 0 0 0 ;
+}
+.doc-sec .doctors .carousel .inner-carousel .item .doc-info{
   display: flex;
   align-items: flex-start;
   flex-direction: row;
   padding: 4rem 0 0 1rem;
 }
 
-.doc-info .trans-doc{
+.doc-sec .doctors .carousel .inner-carousel .item .doc-info .trans-doc{
   display: flex;
   align-items: flex-start;
   flex-direction: row;
   gap: 1rem;
 }
 
-.doc-info p{
+.doc-sec .doctors .carousel .inner-carousel .item .doc-info p{
   color: var(--Red);
   font-family: 'Roboto',sans-serif;
   font-size: 1.25rem;
@@ -415,7 +423,7 @@
   letter-spacing: 0.03125rem;
 }
 
-.item:hover {
+.doc-sec .doctors .carousel .inner-carousel .item:hover {
   transform: scale(1.1);
 }
 
